syntax = "proto3";
package ggezchain.acl;

option go_package = "github.com/GGEZLabs/ggezchain/x/acl/types";

message AccessDefinition {
  string module     = 1;
  bool   is_maker   = 2;
  bool   is_checker = 3;
}
